static/css/main.css
.alert p {
    margin-bottom: 0;
}

.trashed {
    text-decoration: line-through;
}

.table {
    margin-top: 1rem;
}

.table > tbody > tr > td.overlay,
.table > tbody > tr > td.overlay:hover {
    background: none;
}

.overlay {
    display: none;
}

.overlay:target {
    z-index: 2;
    display: block;
    background-color: rgba(0, 0, 0, 0.5) ;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.overlay .content {
    color: black;
    margin: 0 auto;
    max-width: 640px;
    max-height: 780px;
    margin-top: 20vh;
    border: 20px solid white;
    border-radius: 2%;
    background-color: white;
}

.overlay .content img {
    max-width: 300px;
    max-height: 200px;
}

